# instanseg-brightfield-cell-model

./: .env.example  .gitignore  CLAUDE_HANDOFF.md  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
config/: default.yaml
evaluation/: CONCERNS_DOCUMENTATION_GUIDE.md  DAY6_RESULTS.html  DEBATE_GATE_2_SYNTHESIS.md  DEBATE_GATE_3_SELECTIVITY.md  DEBATE_GATE_4_DAY6_EXECUTION.md  DEBATE_GATE_5_V2_BUG_FIX.md  DEBATE_GATE_6_DELIVER.md  DISCOVERY_MODEL_IMPROVEMENTS.md  FOUNDATION_MODEL_FUSION_PROTOTYPE.md  FOUNDATION_MODEL_FUSION_RESEARCH.md  MEMBRANE_RESEARCH_REPORT.md  PROJECT_REVIEW_15_AGENT.md  ROADMAP.md  SESSION_REPORT_2026-03-19.md  SESSION_REPORT_2026-03-19_DAY5.md  SESSION_REPORT_2026-03-20_DAY6.md  SESSION_REPORT_2026-03-20_DAY7.md  SESSION_REPORT_2026-03-22_MEMBRANE_UNET.md  SESSION_REPORT_2026-03-24_MEGAZORD.md  SESSION_REPORT_2026-03-26_GEN2_COMPLETE.md  SESSION_REPORT_2026-03-27_DETECTION_DISCOVERY.md  SESSION_REPORT_2026-03-27_V3_RESULTS.md  boundary_refinement_results.json  final_comparison.json  fluoro_on_brightfield.json  instanseg_v3_gap_results.json  membrane_thickness.json  membrane_thickness_results.json  membrane_unet_gap_results.json  metrics.json  negative_tissue_test.json  overnight_log.txt  overnight_membrane_summary.json  pipeline_comparison_log.txt  pipeline_comparison_log_v2.txt  pipeline_comparison_log_v3.txt  selectivity_validation_log.txt  stain_aug_ablation.json  teacher_summary.json
scripts/: 00_extract_pretrained_weights.py  01_extract_tiles.py  02_generate_masks.py  03_prepare_dataset.py  04_train.py  04_train_v2.py  05_evaluate.py  (+44 more)
(+66 files in other folders)
